feat: grab the users recent top tracks

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
+    "moduleResolution": "node",
     "target": "es2017"
   },
   "compileOnSave": true,
