--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,11 @@
   "name": "typescript-functions",
   "description": "TypeScript sample Cloud Functions for Firebase",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.19.2",
     "firebase-admin": "~7.1.1",
-    "firebase-functions": "^2.2.1"
+    "firebase-functions": "^2.2.1",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.37",
