--- a/functions/package.json
+++ b/functions/package.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.19.2",
-    "firebase-admin": "~7.1.1",
-    "firebase-functions": "^2.2.1",
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.1",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
