--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,14 @@
 {
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
     "source": "functions"
-  },
-  "database": {
-    "rules": "database.rules.json"
   },
   "hosting": {
     "public": "public",
