fix: share link mvp

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+    } ]
   }
 }
