--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
   "description": "TypeScript sample Cloud Functions for Firebase",
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "cors": "^2.8.5",
     "axios": "^0.19.2",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1",
